--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,14 @@
 #
 #    pip-compile
 #
+certifi==2020.6.20        # via -r requirements.in, requests
+chardet==3.0.4            # via -r requirements.in, requests
+idna==2.10                # via -r requirements.in, requests
+nba-api==1.1.9            # via -r requirements.in
+numpy==1.19.2             # via -r requirements.in, pandas
+pandas==1.1.3             # via -r requirements.in
+python-dateutil==2.8.1    # via -r requirements.in, pandas
+pytz==2020.1              # via -r requirements.in, pandas
+requests==2.24.0          # via -r requirements.in, nba-api
+six==1.15.0               # via -r requirements.in, python-dateutil
+urllib3==1.25.10          # via -r requirements.in, requests
