--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,23 @@
+beautifulsoup4==4.9.3
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
+docopt==0.6.2
 idna==2.10
-nba-api==1.1.9
-numpy==1.19.2
-pandas==1.1.3
-python-dateutil==2.8.1
-pytz==2020.1
+joblib==0.16.0
+lxml==4.6.1
+nltk==3.5
+pip-tools==5.3.1
+pipdeptree==1.0.0
+pipreqs==0.4.10
+pybuilder==0.12.10
+pybuilder-pip-tools==1.1.0
+PySocks==1.7.1
+regex==2020.7.14
 requests==2.24.0
 six==1.15.0
+snscrape==0.3.4
+soupsieve==2.0.1
+tqdm==4.49.0
 urllib3==1.25.10
+yarg==0.1.9
