--- a/requirements.in
+++ b/requirements.in
@@ -1,23 +1,184 @@
+absl-py==0.11.0
+alabaster==0.7.8
+appdirs==1.4.4
+apturl==0.5.2
+asn1crypto==0.24.0
+astunparse==1.6.3
+awscli==1.18.69
+Babel==2.6.0
+bcrypt==3.1.7
 beautifulsoup4==4.9.3
+blinker==1.4
+blis==0.4.1
+botocore==1.16.19
+Brlapi==0.7.0
+bs4==0.0.1
+cached-property==1.5.2
+cachetools==4.1.1
+catalogue==1.0.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cssselect==1.1.0
+cupshelpers==1.0
+cycler==0.10.0
+cymem==2.0.3
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.1
+distro==1.4.0
+distro-info===0.23ubuntu1
 docopt==0.6.2
+docutils==0.16
+duplicity==0.8.12.0
+en-core-web-sm==2.3.1
+entrypoints==0.3
+fake-useragent==0.1.11
+fasteners==0.14.1
+feedparser==5.2.1
+filelock==3.0.12
+Flask==1.1.2
+future==0.18.2
+gast==0.3.3
+GDAL==3.0.4
+google-auth==1.23.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+grpcio==1.33.2
+h5py==2.10.0
+httplib2==0.14.0
 idna==2.10
+imagesize==1.2.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jmespath==0.9.4
 joblib==0.16.0
-lxml==4.6.1
+kazam==1.4.5
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+keyring==18.0.1
+keyrings.alt==3.4.0
+kiwisolver==1.2.0
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+lxml==4.5.2
+macaroonbakery==1.3.1
+Mako==1.1.0
+Markdown==3.3.3
+MarkupSafe==1.1.0
+matplotlib==3.3.2
+MechanicalSoup==0.12.0
+monotonic==1.5
+murmurhash==1.0.2
+nba-api==1.1.9
+netifaces==0.10.4
 nltk==3.5
+NRCLex==3.0.0
+numpy==1.18.5
+numpydoc==0.7.0
+oauth==1.0.1
+oauthlib==3.1.0
+olefile==0.46
+opt-einsum==3.3.0
+packaging==20.3
+pandas==1.1.2
+paramiko==2.6.0
+parse==1.18.0
+pexpect==4.6.0
+Pillow==7.0.0
 pip-tools==5.3.1
 pipdeptree==1.0.0
+pipenv==2020.8.13
 pipreqs==0.4.10
-pybuilder==0.12.10
+plac==1.1.3
+ply==3.11
+preshed==3.0.2
+prompt-toolkit==2.0.10
+protobuf==3.13.0
+py4j==0.10.9
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pybuilder==0.12.9
 pybuilder-pip-tools==1.1.0
+pycairo==1.16.2
+pycrypto==2.6.1
+pycups==1.9.73
+pyee==7.0.4
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyparsing==2.4.6
+pyppeteer==0.2.2
+pyquery==1.4.1
+pyRFC3339==1.1
 PySocks==1.7.1
-regex==2020.7.14
+pyspark==3.0.1
+python-apt==2.0.0+ubuntu0.20.4.1
+python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
+python-twitter==3.5
+pytz==2020.1
+pyxdg==0.26
+PyYAML==5.3.1
+regex==2020.9.27
+reportlab==3.5.34
 requests==2.24.0
+requests-html==0.10.0
+requests-oauthlib==1.3.0
+requests-unixsocket==0.2.0
+roman==2.0.0
+rsa==4.6
+s3transfer==0.3.3
+scipy==1.5.3
+SecretStorage==2.3.1
+setproctitle==1.1.10
+simplejson==3.16.0
 six==1.15.0
+smdv==0.1.1
 snscrape==0.3.4
 soupsieve==2.0.1
-tqdm==4.49.0
+spacy==2.3.2
+Sphinx==1.8.5
+srsly==1.0.2
+ssh-import-id==5.10
+system-service==0.3
+systemd-python==234
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+textblob==0.15.3
+thinc==7.4.1
+tqdm==4.50.0
+tweepy==3.9.0
+twitter-scraper==0.4.4
+twython==3.8.2
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
 urllib3==1.25.10
+usb-creator==0.3.7
+virtualenv==20.0.31
+virtualenv-clone==0.5.4
+w3lib==1.22.0
+wadllib==1.3.3
+wasabi==0.8.0
+wcwidth==0.1.8
+websockets==8.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+xkit==0.0.0
+xonsh==0.9.13
 yarg==0.1.9
+zope.interface==4.7.1
