--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,25 @@ docopt==0.6.2             # via -r requirements.in, pipreqs
 idna==2.10                # via -r requirements.in, requests
 joblib==0.16.0            # via -r requirements.in, nltk
 lxml==4.6.1               # via -r requirements.in, snscrape
-nltk==3.5                 # via -r requirements.in
+nba-api==1.1.9            # via -r requirements.in
+nltk==3.5                 # via -r requirements.in, textblob
+nrclex==3.0.0             # via -r requirements.in
+numpy==1.19.2             # via -r requirements.in, pandas
+pandas==1.1.3             # via -r requirements.in
 pip-tools==5.3.1          # via -r requirements.in
 pipdeptree==1.0.0         # via -r requirements.in
 pipreqs==0.4.10           # via -r requirements.in
 pybuilder-pip-tools==1.1.0  # via -r requirements.in
 pybuilder==0.12.10        # via -r requirements.in
 pysocks==1.7.1            # via -r requirements.in, requests
+python-dateutil==2.8.1    # via -r requirements.in, pandas
+pytz==2020.1              # via -r requirements.in, pandas
 regex==2020.7.14          # via -r requirements.in, nltk
-requests==2.24.0          # via -r requirements.in, snscrape, yarg
-six==1.15.0               # via -r requirements.in, pip-tools
+requests==2.24.0          # via -r requirements.in, nba-api, snscrape, yarg
+six==1.15.0               # via -r requirements.in, pip-tools, python-dateutil
 snscrape==0.3.4           # via -r requirements.in
 soupsieve==2.0.1          # via -r requirements.in, beautifulsoup4
+textblob==0.15.3          # via -r requirements.in, nrclex
 tqdm==4.49.0              # via -r requirements.in, nltk
 urllib3==1.25.10          # via -r requirements.in, requests
 yarg==0.1.9               # via -r requirements.in, pipreqs
