--- a/requirements.in
+++ b/requirements.in
@@ -82,6 +82,7 @@ MarkupSafe==1.1.0
 matplotlib==3.3.2
 MechanicalSoup==0.12.0
 monotonic==1.5
+mpi4py==3.0.3
 msrest==0.6.19
 murmurhash==1.0.2
 nba-api==1.1.9
@@ -105,6 +106,7 @@ pipdeptree==1.0.0
 pipenv==2020.8.13
 pipreqs==0.4.10
 plac==1.1.3
+plotly==4.13.0
 ply==3.11
 preshed==3.0.2
 prompt-toolkit==2.0.10
@@ -143,6 +145,7 @@ requests==2.24.0
 requests-html==0.10.0
 requests-oauthlib==1.3.0
 requests-unixsocket==0.2.0
+retrying==1.3.3
 roman==2.0.0
 rsa==4.6
 s3transfer==0.3.3
